--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "npm version patch && npm publish",
+    "feature": "npm version minor && npm publish"
   },
   "private": true,
   "dependencies": {
