feat: add component card

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "paths": {
       "button": [
         "dist/button"
+      ],
+      "card": [
+        "dist/card"
       ]
     },
     "outDir": "./dist/out-tsc",
